[gd_scene load_steps=5 format=2]

[ext_resource path="res://materiais/imagem/dica_1.jpeg" type="Texture" id=1]
[ext_resource path="res://script/pista_casa_rosa.gd" type="Script" id=2]
[ext_resource path="res://fonts/COURGETTE-REGULAR.TTF" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 31
extra_spacing_top = -3
font_data = ExtResource( 3 )

[node name="pista_casa_rosa" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 698, 214 )
scale = Vector2( 0.572222, 0.557031 )
texture = ExtResource( 1 )
offset = Vector2( -861.3, 248.504 )

[node name="pista" type="Label" parent="Sprite"]
anchor_left = 0.13
anchor_top = 0.466
anchor_right = 0.13
anchor_bottom = 0.466
margin_left = -1176.6
margin_top = -95.48
margin_right = -694.6
margin_bottom = 221.52
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Diante daquela visão tenebrosa, juntou todas as forças que tinha e soltou algo que era para ser"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 237.0
margin_top = 18.0
margin_right = 394.0
margin_bottom = 80.0

[node name="cazumbar" type="TextureButton" parent="."]
margin_left = 48.0
margin_top = 22.0
margin_right = 205.0
margin_bottom = 84.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="cazumbar" to="." method="_on_cazumbar_pressed"]
